--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
 <tr>
 	<td>
 	<ul>
-	<li>Backlight failure
-	<li>Charge &amp; Power failures
+	<li>Pozadinska rasvjeta
+	<li>Charge &amp; Neispravna napajanja
 	<li>Liquid damage repair
 	</ul>
 	</td>
